--- a/fuente-1.html
+++ b/fuente-1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/fuente-1.css"> 
 </head>
 <body>  
-    <h2 class="cinzel">fuente en cinzel</h2>
+    <h2 class="cinzel">fuente cinzel</h2>
 
     <a href="index.html">inicio</fuente-2></a>
 </body>
