--- a/fuente-2.html
+++ b/fuente-2.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="/css/fuente-2.css">
 </head>
 <body>
-    <h2 class="bebas-neve">prueba bebas neve</h2>
-    
+    <div class="main-box">
+    <h2 class="bebas-neve">NETFLIX</h2>
+    </div>
     <a href="index.html">inicio</fuente-2></a>
 </body>
 </html>
