--- a/fuente-3.html
+++ b/fuente-3.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/css/fuente-3.css">
 </head>
 <body>
-    <h2 class="waltograph">prueba waltograph</h2>
+
+    <h2 class="waltograph">fuente waltograph</h2>
 
     <a href="index.html">inicio</fuente-2></a>
 </body>
