--- a/fuente-3.html
+++ b/fuente-3.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h2 class="waltograph">fuente waltograph</h2>
+    <h2 class="waltograph">Gisney</h2>
 
     <a href="index.html">inicio</fuente-2></a>
 </body>
