--- a/fuente-1.html
+++ b/fuente-1.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="/css/fuente-1.css"> 
 </head>
 <body>  
+    <div class="main-box">
     <h2 class="cinzel">GAME OF THRONES</h2>
-
+     </div>
     <a href="index.html">inicio</fuente-2></a>
 </body>
 </html>
