--- a/fuente-3.html
+++ b/fuente-3.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="/css/fuente-3.css">
 </head>
 <body>
-
-    <h2 class="waltograph">Gisney</h2>
-
+    <div class="fondo">
+    <h2 class="waltograph">Gisney+</h2>
+    </div>
     <a href="index.html">inicio</fuente-2></a>
 </body>
 </html>
