--- a/fuente-4.html
+++ b/fuente-4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/fuente-4.css">
+    <link rel="stylesheet" href="./css/fuente-4.css">
 <style>
     body{
         background-color: aqua;
