--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="content">
         <button>
-            <a href="fuente-1.html">fuente-1</a><!--ayuda a crear un boton para acceder a otra pagina-->
+            <a href="fuente-1.html">Gme of trhones</a><!--ayuda a crear un boton para acceder a otra pagina-->
         </button>
 
         <button>
@@ -36,6 +36,9 @@
         <button>
             <a href="fuente-4.html">fuente-4</a>
         </button>
+<ul>
+    <li> <a href="listsa.html">lista</a></li>
+</ul>
     </div>
 
 </body>
