--- a/fuente-3.html
+++ b/fuente-3.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/fuente-3.css">
 </head>
 <body>
-    <div class="fondo">
+    <div class="main-box">
     <h2 class="waltograph">Gisney+</h2>
     </div>
     <a href="index.html">inicio</fuente-2></a>
