--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
         </button>
 
         <button>
-            <a href="fuente-2.html">fuente-2</a>
+            <a href="fuente-2.html">NETFLIX</a>
         </button>
         
         <button>
-            <a href="fuente-3.html">fuente-3</a>
+            <a href="fuente-3.html">Gisney+</a>
         </button>
 
         <button>
             <a href="fuente-4.html">fuente-4</a>
         </button>
 <ul>
-    <li> <a href="listsa.html">lista</a></li>
+    <li> <a href="lista.html">lista</a></li>
 </ul>
     </div>
 
