--- a/fuente-2.html
+++ b/fuente-2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="main-box">
-    <h2 class="bebas-newe">NETFLIX</h2>
+    <h2 class="special-font">NETFLIX</h2>
     </div>
     <a href="index.html">inicio</fuente-2></a>
 </body>
