--- a/index.html
+++ b/index.html
@@ -21,24 +21,21 @@
     <h2 class="autor">Autor:juan camilo</h2><!--titulo secundario-->
 
     <div class="content">
-        <button>
+
             <a href="fuente-1.html">Gme of trhones</a><!--ayuda a crear un boton para acceder a otra pagina-->
-        </button>
 
-        <button>
             <a href="fuente-2.html">NETFLIX</a>
-        </button>
-        
-        <button>
-            <a href="fuente-3.html">Gisney+</a>
-        </button>
 
-        <button>
+            <a href="fuente-3.html">Disney</a>
+
             <a href="fuente-4.html">fuente-4</a>
-        </button>
-<ul>
-    <li> <a href="lista.html">lista</a></li>
-</ul>
+
+            <a href="colors.html">colores</a>
+
+        <ul>
+            <li> <a href="lista.html">lista</a></li>
+        </ul>
+
     </div>
 
 </body>
