--- a/colors.html
+++ b/colors.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>colores</title>
+    <title>documento</title>
     <link rel="stylesheet" href="./css/colors.css">
 </head>
 <body>
     <h1>colores</h1>
 
-    <div class="box-1">color</div>
-    <div class="box-2">color</div>
-    <div class="box-3">color</div>
-    <div class="box-4">color</div>
-    <div class="box-5">color</div>
-    <div class="box-6">color</div>
-    <div class="box-7">color</div>
-    <div class="box-8">color</div>
-    <div class="box-9">color</div>
+    <h2>colores por nombre</h2>
+    <div class="nombre">
+    <div class="box-1"></div>
+    <div class="box-2"></div>
+    <div class="box-3"></div>
+    </div>
+
+    <h2>colores por codigo rgb</h2>
+    <div class="rgb">
+    <div class="box-4"></div>
+    <div class="box-5"></div>
+    <div class="box-6"></div>
+    </div>
+
+    <h2>colores por codigo hexadecimal</h2>
+    <div class="hexadecimal">
+    <div class="box-7"></div>
+    <div class="box-8"></div>
+    <div class="box-9"></div>
+    </div>
 
 </body>
 </html>
