--- a/colors.html
+++ b/colors.html
@@ -4,32 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>documento</title>
+    <title>Colores</title>
     <link rel="stylesheet" href="./css/colors.css">
 </head>
 <body>
-    <h1>colores</h1>
+    <h1>Colores</h1>
 
-    <h2>colores por nombre</h2>
-    <div class="nombre">
-    <div class="box-1"></div>
-    <div class="box-2"></div>
-    <div class="box-3"></div>
+    <h2>Colores por nombre</h2>
+    <div class="box-colors">
+        <div class="box-style box-1"><span>beige</span></div>
+        <div class="box-style box-2"><span>color</span></div>
+        <div class="box-style box-3"><span>color</span></div>
     </div>
 
-    <h2>colores por codigo rgb</h2>
-    <div class="rgb">
-    <div class="box-4"></div>
-    <div class="box-5"></div>
-    <div class="box-6"></div>
+    <h2>Colores por codigo rgb</h2>
+    <div class="box-colors">
+        <div class="box-style box-4"><span>color</span></div>
+        <div class="box-style box-5"><span>color</span></div>
+        <div class="box-style box-6"><span>color</span></div>
     </div>
 
-    <h2>colores por codigo hexadecimal</h2>
-    <div class="hexadecimal">
-    <div class="box-7"></div>
-    <div class="box-8"></div>
-    <div class="box-9"></div>
+    <h2>Colores por codigo hexadecimal</h2>
+    <div class="box-colors">
+        <div class="box-style box-7"><span>color</span></div>
+        <div class="box-style box-8"><span>color</span></div>
+        <div class="box-style box-9"><span>color</span></div>
     </div>
 
+    <a href="index.html">inicio</a>
 </body>
 </html>
