--- a/colors.html
+++ b/colors.html
@@ -12,23 +12,23 @@
 
     <h2>Colores por nombre</h2>
     <div class="box-colors">
-        <div class="box-style box-1"><span>beige</span></div>
-        <div class="box-style box-2"><span>color</span></div>
-        <div class="box-style box-3"><span>color</span></div>
+        <div class="box-style box-1"><span>negro</span></div>
+        <div class="box-style box-2"><span>azul</span></div>
+        <div class="box-style box-3"><span>amarillo</span></div>
     </div>
 
     <h2>Colores por codigo rgb</h2>
     <div class="box-colors">
-        <div class="box-style box-4"><span>color</span></div>
-        <div class="box-style box-5"><span>color</span></div>
-        <div class="box-style box-6"><span>color</span></div>
+        <div class="box-style box-4"><span>rojo</span></div>
+        <div class="box-style box-5"><span>naranja</span></div>
+        <div class="box-style box-6"><span>verde</span></div>
     </div>
 
     <h2>Colores por codigo hexadecimal</h2>
     <div class="box-colors">
-        <div class="box-style box-7"><span>color</span></div>
-        <div class="box-style box-8"><span>color</span></div>
-        <div class="box-style box-9"><span>color</span></div>
+        <div class="box-style box-7"><span>morado</span></div>
+        <div class="box-style box-8"><span>agua</span></div>
+        <div class="box-style box-9"><span>rosa</span></div>
     </div>
 
     <a href="index.html">inicio</a>
