--- a/index.html
+++ b/index.html
@@ -6,14 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mi-sitio-web</title>
     <link rel="stylesheet" href="./css/index.css">
-
-    <style>
-    body{
-        background-color:aqua ;/* color de fondo */
-        color:black;/* color de letras */
-    }
-    </style><!--agrega color de fondo a la pagina-->
-
 </head>
 <body>
     <!--este es le primer titilo-->
@@ -21,21 +13,10 @@
     <h2 class="autor">Autor:juan camilo</h2><!--titulo secundario-->
 
     <div class="content">
-
-            <a href="fuente-1.html">Gme of trhones</a><!--ayuda a crear un boton para acceder a otra pagina-->
-
-            <a href="fuente-2.html">NETFLIX</a>
-
-            <a href="fuente-3.html">Disney</a>
-
-            <a href="fuente-4.html">fuente-4</a>
-
-            <a href="colors.html">colores</a>
-
-        <ul>
-            <li> <a href="lista.html">lista</a></li>
-        </ul>
-
+        <a href="fuente-1.html">Game of thrones</a><!--ayuda a crear un boton para acceder a otra pagina-->
+        <a href="fuente-2.html">NETFLIX</a>
+        <a href="fuente-3.html">Disney</a>
+         <a href="lista.html">lista</a>
     </div>
 
 </body>
