--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <!--este es le primer titilo-->
-    <h1 class="bienvenidos">Bienvenidos</h1><!--titulo primario/no se puede volver a colocar un H1-->
-    <h2 class="autor">Autor:juan camilo</h2><!--titulo secundario-->
+    <div class="text">
+        <h1 class="bienvenidos">Bienvenidos</h1><!--titulo primario/no se puede volver a colocar un H1-->
+        <h2 class="autor">Autor:juan camilo</h2><!--titulo secundario-->
 
-    <div class="content">
-        <a href="fuente-1.html">Game of thrones</a><!--ayuda a crear un boton para acceder a otra pagina-->
-        <a href="fuente-2.html">NETFLIX</a>
-        <a href="fuente-3.html">Disney</a>
-         <a href="lista.html">lista</a>
+        <div class="content">
+            <div><a href="fuente-1.html">Game of thrones</a></div>
+            <div><a href="fuente-2.html">NETFLIX</a></div>
+            <div><a href="fuente-3.html">Disney</a></div>
+            <div><a href="lista.html">lista</a></div>
+            <div><a href="colors.html">Colores</a></div>   
+        </div>
     </div>
-
 </body>
 </html>
